force-app/main/default/objects/Sequence_Job__mdt/Sequence_Job__mdt.object-meta.xml
<CustomObject>
    <description>This object contains the various sequences necessary for interval based jobs.</description>
    <label>Sequence Job</label>
    <pluralLabel>Sequence Jobs</pluralLabel>
</CustomObject>