force-app/main/default/objects/Sequence_Job__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Should this be run?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>