force-app/main/default/objects/Sequence_Job__mdt/fields/AllOrNone__c.field-meta.xml
<CustomField>
    <fullName>AllOrNone__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should all or none be enforced?</inlineHelpText>
    <label>All or None</label>
    <type>Checkbox</type>
</CustomField>