force-app/main/default/objects/Sequence_Job__mdt/fields/BatchLimit__c.field-meta.xml
<CustomField>
    <fullName>BatchLimit__c</fullName>
    <defaultValue>200</defaultValue>
    <inlineHelpText>What should the batch size be set to? You may only enter upto 200</inlineHelpText>
    <label>Job Batch Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>