force-app/main/default/objects/Sequence_Job__mdt/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <defaultValue>&#39;SOBJECT_API_NAME&#39;</defaultValue>
    <inlineHelpText>What is the object that will be queried against? DO NOT include the FROM keyword</inlineHelpText>
    <label>Query - From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>