force-app/main/default/objects/Sequence_Job__mdt/fields/HandlerClass__c.field-meta.xml
<CustomField>
    <fullName>HandlerClass__c</fullName>
    <defaultValue>&quot;JobSequenceDefaultHandler&quot;</defaultValue>
    <description>The default handler included with the package has some basic functions. See the documentation for more information on how to implement your own handler class.</description>
    <inlineHelpText>If you wish to use a customized handler for your sequence logic, then you must define it here.</inlineHelpText>
    <label>Handler Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>