force-app/main/default/objects/Sequence_Job__mdt/fields/IsBatchJob__c.field-meta.xml
<CustomField>
    <fullName>IsBatchJob__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Should this be run in a batch context?</inlineHelpText>
    <label>Batch Job</label>
    <type>Checkbox</type>
</CustomField>