force-app/main/default/objects/Sequence_Job__mdt/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <inlineHelpText>How many rows should the query be limited to? DO NOT include the LIMIT keyword.</inlineHelpText>
    <label>Query - Record Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>