force-app/main/default/objects/Sequence_Job__mdt/fields/NotificationEmail__c.field-meta.xml
<CustomField>
    <fullName>NotificationEmail__c</fullName>
    <inlineHelpText>What is the email address that should be used in case of job failure?</inlineHelpText>
    <label>Job Notification Email</label>
    <type>Email</type>
</CustomField>