force-app/main/default/objects/Sequence_Job__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>What order should this job be executed in? This will be used for ordering when the sequence is run. Feel free to use letter combos to aide in the ordering process without re-working the rest of the object</inlineHelpText>
    <label>Order</label>
    <length>5</length>
    <type>Text</type>
</CustomField>