force-app/main/default/objects/Sequence_Job__mdt/fields/OrderBy__c.field-meta.xml
<CustomField>
    <fullName>OrderBy__c</fullName>
    <defaultValue>&#39;CreatedDate DESC&#39;</defaultValue>
    <inlineHelpText>What field(s) should the query be ordered by? DO NOT include the ORDER BY keyword; however, you will need to include DESC or ASC as applicable</inlineHelpText>
    <label>Query - OrderBy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>