force-app/main/default/objects/Sequence_Job__mdt/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <inlineHelpText>If there are parameters that need to be set to run the function, enter them here. The parameters should be &quot;Parameter Name:Value&quot;. If there are multiple use a comma to separate. e.g. paramName1:value1,paramName2:value2</inlineHelpText>
    <label>Job Parameters</label>
    <type>TextArea</type>
</CustomField>