force-app/main/default/objects/Sequence_Job__mdt/fields/PermDelete__c.field-meta.xml
<CustomField>
    <fullName>PermDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is a delete operation, will the deleted records be removed from the recycle bin?</inlineHelpText>
    <label>Permanent Delete</label>
    <type>Checkbox</type>
</CustomField>