force-app/main/default/objects/Sequence_Job__mdt/fields/Select__c.field-meta.xml
<CustomField>
    <fullName>Select__c</fullName>
    <defaultValue>&#39;Id&#39;</defaultValue>
    <inlineHelpText>What is the select statement you would like to use? DO NOT include the &#39;SELECT&#39; keyword</inlineHelpText>
    <label>Query - Select</label>
    <type>TextArea</type>
</CustomField>