force-app/main/default/objects/Sequence_Job__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>When the job is executed, will it be a DML (Database Markup Language, e.g. a simple update statement) or function (a custom function for more advanced functionality, e.g. triggering a field within the record set)?</inlineHelpText>
    <label>Job Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DML</fullName>
                <default>true</default>
                <label>DML</label>
            </value>
            <value>
                <fullName>Function</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>