force-app/main/default/objects/Sequence_Job__mdt/fields/Where__c.field-meta.xml
<CustomField>
    <fullName>Where__c</fullName>
    <defaultValue>&#39;Id &lt;&gt; null&#39;</defaultValue>
    <inlineHelpText>What are the conditions that will be used to filter the result set? DO NOT include the WHERE keyword</inlineHelpText>
    <label>Query - Where</label>
    <type>TextArea</type>
</CustomField>