force-app/main/default/objects/Sequence_Job__mdt/validationRules/SJ_Batch_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>SJ_Batch_Limit</fullName>
    <active>true</active>
    <description>Checks the batch limit  size</description>
    <errorConditionFormula>AND(NOT(ISBLANK(BatchLimit__c)),BatchLimit__c&gt;200)</errorConditionFormula>
    <errorDisplayField>BatchLimit__c</errorDisplayField>
    <errorMessage>The batch limit may not be set to more than 200</errorMessage>
</ValidationRule>