force-app/main/default/objects/Sequence_Job__mdt/validationRules/SJ_Keyword_Check_FROM.validationRule-meta.xml
<ValidationRule>
    <fullName>SJ_Keyword_Check_FROM</fullName>
    <active>true</active>
    <description>Validates that the from keyword is not present</description>
    <errorConditionFormula>BEGINS(UPPER(SUBSTITUTE(From__c, &#39; &#39;, &#39;&#39;)),&#39;FROM&#39;)</errorConditionFormula>
    <errorDisplayField>From__c</errorDisplayField>
    <errorMessage>Do not include the from keyword</errorMessage>
</ValidationRule>