force-app/main/default/objects/Sequence_Job__mdt/validationRules/SJ_Keyword_Check_SELECT.validationRule-meta.xml
<ValidationRule>
    <fullName>SJ_Keyword_Check_SELECT</fullName>
    <active>true</active>
    <description>Validates that the select keyword is not present</description>
    <errorConditionFormula>BEGINS(UPPER(SUBSTITUTE(Select__c, &#39; &#39;, &#39;&#39;)),&#39;SELECT&#39;)</errorConditionFormula>
    <errorDisplayField>Select__c</errorDisplayField>
    <errorMessage>Do not include the select keyword</errorMessage>
</ValidationRule>