force-app/main/default/objects/Sequence_Job__mdt/validationRules/SJ_Keyword_Check_WHERE.validationRule-meta.xml
<ValidationRule>
    <fullName>SJ_Keyword_Check_WHERE</fullName>
    <active>true</active>
    <description>Validates that the where keyword is not present</description>
    <errorConditionFormula>BEGINS(UPPER(SUBSTITUTE(Where__c, &#39; &#39;, &#39;&#39;)),&#39;WHERE&#39;)</errorConditionFormula>
    <errorDisplayField>Where__c</errorDisplayField>
    <errorMessage>Do not include the where keyword</errorMessage>
</ValidationRule>