force-app/main/default/objects/Sequence_Job__mdt/validationRules/SJ_Upsert_External_Id_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>SJ_Upsert_External_Id_Check</fullName>
    <active>true</active>
    <description>Will validate that the Id field is not used as an external Id</description>
    <errorConditionFormula>AND(NOT(ISBLANK(UpsertExtIdField__c)),LOWER(UpsertExtIdField__c) = &#39;id&#39;)</errorConditionFormula>
    <errorDisplayField>UpsertExtIdField__c</errorDisplayField>
    <errorMessage>You can not define &quot;Id&quot; as the upsert field, Salesforce will do this for you automatically.</errorMessage>
</ValidationRule>