force-app/main/default/objects/Sequence_Job__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Order__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>ExecutionJob__c</columns>
    <columns>Type__c</columns>
    <columns>Frequency__c</columns>
    <columns>IsBatchJob__c</columns>
    <columns>BatchLimit__c</columns>
    <columns>Limit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>